--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link
+      rel="shortcut icon"
+      href="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Pizzao</title>
   </head>
@@ -47,7 +52,10 @@
             <div id="shopListDropdown" class="nav-shop-dropdown dn">
               <div class="shop-dropdown-pizza">
                 <div class="shop-dropdown-pizza-div">
-                  <img src="assets/img/pizzaimages/1.png" alt="" />
+                  <img
+                    src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png"
+                    alt=""
+                  />
                   <div class="dropdown-pizza-text">
                     <div
                       style="
@@ -76,7 +84,10 @@
                 </div>
 
                 <div class="shop-dropdown-pizza-div">
-                  <img src="assets/img/pizzaimages/2.png" alt="" />
+                  <img
+                    src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/2.png"
+                    alt=""
+                  />
                   <div class="dropdown-pizza-text">
                     <div
                       style="
@@ -198,15 +209,54 @@
                 alt=""
               />
             </div>
-
           </div>
         </div>
       </div>
 
       <div class="second-main">
-        
+        <div class="second-main-content">
+          <div class="second-main-top-img">
+            <img src="assets/img/SECOND-PART-IMG/order-top.png" alt="" />
+          </div>
+
+          <div class="second-main-content-svg-text">
+            <div class="second-main-order">
+              <img src="assets/img/SECOND-PART-IMG/order-1.svg" alt="" />
+              <p>ORDER YOUR FOOD</p>
+              <span
+                >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                do eius-Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eius-Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eius-</span
+              >
+            </div>
+            <div class="second-main-order">
+              <img src="assets/img/SECOND-PART-IMG/order-2.svg" alt="" />
+              <p>DELIVERY OR PICK UP</p>
+              <span
+                >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                do eius-Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eius-Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eius-</span
+              >
+            </div>
+            <div class="second-main-order">
+              <img src="assets/img/SECOND-PART-IMG/order-3.svg" alt="" />
+              <p>DELICIOUS RECEIPE</p>
+              <span
+                >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
+                do eius-Lorem ipsum dolor sit amet, consectetur adipisicing
+                elit, sed do eius-Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit, sed do eius-</span
+              >
+            </div>
+          </div>
+
+          <div class="second-main-bottom-img">
+            <img src="assets/img/SECOND-PART-IMG/order-bottom.png" alt="" />
+          </div>
+        </div>
       </div>
-      
     </main>
     <!-- Main-End -->
 
