--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       type="image/x-icon"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Pizzao</title>
+    <title>Pizzon</title>
   </head>
 
   <body>
@@ -216,12 +216,20 @@
       <div class="second-main">
         <div class="second-main-content">
           <div class="second-main-top-img">
-            <img src="assets/img/SECOND-PART-IMG/order-top.png" alt="" />
+            <img
+              draggable="false"
+              src="assets/img/SECOND-PART-IMG/order-top.png"
+              alt=""
+            />
           </div>
 
           <div class="second-main-content-svg-text">
             <div class="second-main-order">
-              <img src="assets/img/SECOND-PART-IMG/order-1.svg" alt="" />
+              <img
+                draggable="false"
+                src="assets/img/SECOND-PART-IMG/order-1.svg"
+                alt=""
+              />
               <p>ORDER YOUR FOOD</p>
               <span
                 >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -231,7 +239,11 @@
               >
             </div>
             <div class="second-main-order">
-              <img src="assets/img/SECOND-PART-IMG/order-2.svg" alt="" />
+              <img
+                draggable="false"
+                src="assets/img/SECOND-PART-IMG/order-2.svg"
+                alt=""
+              />
               <p>DELIVERY OR PICK UP</p>
               <span
                 >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -241,7 +253,11 @@
               >
             </div>
             <div class="second-main-order">
-              <img src="assets/img/SECOND-PART-IMG/order-3.svg" alt="" />
+              <img
+                draggable="false"
+                src="assets/img/SECOND-PART-IMG/order-3.svg"
+                alt=""
+              />
               <p>DELICIOUS RECEIPE</p>
               <span
                 >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed
@@ -253,8 +269,23 @@
           </div>
 
           <div class="second-main-bottom-img">
-            <img src="assets/img/SECOND-PART-IMG/order-bottom.png" alt="" />
+            <img
+              draggable="false"
+              src="assets/img/SECOND-PART-IMG/order-bottom.png"
+              alt=""
+            />
           </div>
+        </div>
+      </div>
+
+      <div class="third-main">
+        <div class="third-main-header">
+          <p>Fresh From Pizzon</p>
+          <h1>OUR SPECIALITY</h1>
+        </div>
+
+        <div class="third-main-bottom-img">
+          <img src="assets/img/THIRD-PART-IMAGES/menu-top-bg.png" alt="">
         </div>
       </div>
     </main>
