--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <div class="nav-shop-price">
             <div id="shopList" class="nav-shop-based">
-              <i class="fa-solid fa-bag-shopping"></i>
+              <i id="shopListIcon" class="fa-solid fa-bag-shopping"></i>
               <span>0 items - $0.00</span>
             </div>
             <div id="shopListDropdown" class="nav-shop-dropdown dn">
@@ -223,7 +223,7 @@
             />
           </div>
 
-          <div class="second-main-content-svg-text">
+          <div id="second-main-animation" class="second-main-content-svg-text">
             <div class="second-main-order">
               <img
                 draggable="false"
@@ -238,6 +238,7 @@
                 adipisicing elit, sed do eius-</span
               >
             </div>
+
             <div class="second-main-order">
               <img
                 draggable="false"
@@ -252,6 +253,7 @@
                 adipisicing elit, sed do eius-</span
               >
             </div>
+
             <div class="second-main-order">
               <img
                 draggable="false"
@@ -285,11 +287,53 @@
         </div>
 
         <div class="third-main-bottom-img">
-          <img src="assets/img/THIRD-PART-IMAGES/menu-top-bg.png" alt="">
+          <img src="assets/img/THIRD-PART-IMAGES/menu-top-bg.png" alt="" />
         </div>
       </div>
     </main>
     <!-- Main-End -->
+
+    <!-- Footer-Start -->
+    <footer>
+      <div class="footer-content">
+        <div class="footer-left-text">
+          <img src="assets/img/header-logo.png" alt="" />
+          <span
+            >20 Carrochan Rd, Balloch, Alexandria G83 8EG, UK 69QJ+2F
+            Alexandria, United Kingdom</span
+          >
+          <span>PHONE - +91 123 456 789 0, +91 123 456 789 0</span>
+          <span>EMAIL - info@gmail.com</span>
+        </div>
+
+        <div class="footer-center-text">
+          <p>OPENING HOURS</p>
+          <span
+            >Mon - Tues :
+            <span style="color: #fd9d3e">6.00 am - 10.00 pm</span></span
+          >
+          <span
+            >Wednes - Thurs :
+            <span style="color: #fd9d3e">6.00 am - 10.00 pm</span></span
+          >
+          <span>Launch :<span style="color: #fd9d3e"> Everyday </span> </span>
+          <span>Sunday : <span style="color: #fd9d3e">Closed</span></span>
+        </div>
+
+        <div class="footer-right-text">
+          <p>USEFUL LINKS</p>
+          <ul>
+            <li>Privacy Policy</li>
+            <li>Order Tracking</li>
+            <li>Warranty and Services</li>
+            <li>About</li>
+            <li>Contact Us</li>
+            <li>Wishlist</li>
+          </ul>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer-End -->
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/header.js"></script>
