--- a/index.html
+++ b/index.html
@@ -308,11 +308,11 @@
 
         <div class="footer-center-text">
           <p>OPENING HOURS</p>
-          <span
+          <span class="span-wrap"
             >Mon - Tues :
             <span style="color: #fd9d3e">6.00 am - 10.00 pm</span></span
           >
-          <span
+          <span class="span-wrap"
             >Wednes - Thurs :
             <span style="color: #fd9d3e">6.00 am - 10.00 pm</span></span
           >
@@ -325,11 +325,23 @@
           <ul>
             <li>Privacy Policy</li>
             <li>Order Tracking</li>
-            <li>Warranty and Services</li>
             <li>About</li>
             <li>Contact Us</li>
             <li>Wishlist</li>
           </ul>
+        </div>
+      </div>
+
+      <div class="footer-bottom">
+        <div class="hr"></div>
+        <div class="footer-bottom-span-logos">
+          <span>© Pizzon all Rights Reserved. Designed by MuradNuriyev</span>
+          <div class="footer-logo-group">
+            <i class="fa-brands fa-square-facebook fa-shake"></i>
+            <i class="fa-brands fa-square-x-twitter fa-shake"></i>
+            <i class="fa-brands fa-square-instagram fa-shake"></i>
+            <i class="fa-brands fa-square-whatsapp fa-shake"></i>
+          </div>
         </div>
       </div>
     </footer>
