--- a/index.html
+++ b/index.html
@@ -286,9 +286,42 @@
           <h1>OUR SPECIALITY</h1>
         </div>
 
-        <div class="third-main-bottom-img">
-          <img src="assets/img/THIRD-PART-IMAGES/menu-top-bg.png" alt="" />
+        <div id="third-main-animation" class="third-main-pizzas">
+          <div class="third-main-pizza">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-1.jpg" alt="">
+            <p>MEXICAN GREEN WAVE</p>
+          </div>
+
+          <div class="third-main-pizza">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-2.jpg" alt="">
+            <p>DOUBLE CHEESE PIZZA</p>
+          </div>
+
+          <div class="third-main-pizza">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-3.jpg" alt="">
+            <p>MARGHERITA PIZZA</p>
+          </div>
         </div>
+
+        <div id="third-main-animation2" class="third-main-button">
+          <button>VIEW MORE</button>
+        </div>
+
+      </div>
+
+      <div class="fourth-main">
+          <div class="fourth-main-header">
+            <p>Fresh From Pizzon</p>
+            <h1>OUR SPECIAL MENU</h1>
+          </div>
+      </div>
+
+      <div class="fifth-main">
+        <div class="fifth-main-left-part">
+
+        </div>
+
+
       </div>
     </main>
     <!-- Main-End -->
