book table done

--- a/index.html
+++ b/index.html
@@ -288,17 +288,17 @@
 
         <div id="third-main-animation" class="third-main-pizzas">
           <div class="third-main-pizza">
-            <img src="assets/img/THIRD-PART-IMAGES/speciality-1.jpg" alt="">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-1.jpg" alt="" />
             <p>MEXICAN GREEN WAVE</p>
           </div>
 
           <div class="third-main-pizza">
-            <img src="assets/img/THIRD-PART-IMAGES/speciality-2.jpg" alt="">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-2.jpg" alt="" />
             <p>DOUBLE CHEESE PIZZA</p>
           </div>
 
           <div class="third-main-pizza">
-            <img src="assets/img/THIRD-PART-IMAGES/speciality-3.jpg" alt="">
+            <img src="assets/img/THIRD-PART-IMAGES/speciality-3.jpg" alt="" />
             <p>MARGHERITA PIZZA</p>
           </div>
         </div>
@@ -306,22 +306,54 @@
         <div id="third-main-animation2" class="third-main-button">
           <button>VIEW MORE</button>
         </div>
-
       </div>
 
       <div class="fourth-main">
-          <div class="fourth-main-header">
-            <p>Fresh From Pizzon</p>
-            <h1>OUR SPECIAL MENU</h1>
-          </div>
+        <div class="fourth-main-header">
+          <p>Fresh From Pizzon</p>
+          <h1>OUR SPECIAL MENU</h1>
+        </div>
       </div>
 
       <div class="fifth-main">
-        <div class="fifth-main-left-part">
-
+        <div class="fifth-main-top-img">
+          <img src="assets/img/FIFTH-PART-IMG/menu-bottom-bg.png" alt="" />
         </div>
 
+        <div class="fifth-main-content">
+          <div class="fifth-main-left-part">
+            <p>Fresh From Pizzon</p>
+            <h1>BOOK ONLINE</h1>
+            <div class="fifth-main-left-part-span">
+              <span
+                >Sit amet, consectetur adipiscing elit quisque eget maximus
+                velit, non eleifend libero curabitur dapibus mauris sed leo
+                cursus aliquetcras suscipit. Sit amet, consectetur adipiscing
+                elit quisque eget maximus velit, non eleifend libero
+                curabitur</span
+              >
+            </div>
 
+            <div class="fifth-main-left-part-number">
+              <i class="fa-solid fa-phone-volume fa-shake"></i>
+              <p>+ 91 123 456 789</p>
+            </div>
+          </div>
+
+          <div class="fifth-main-right-part">
+            <h2>BOOK A TABLE</h2>
+            <form action="">
+              <input placeholder="Name" type="text" />
+              <input placeholder="Email" type="text" />
+              <input placeholder="How many people?" type="text" />
+              <input placeholder="Date" type="text" />
+            </form>
+
+            <div class="fifth-main-button">
+              <button>BOOK NOW</button>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <!-- Main-End -->
