--- a/index.html
+++ b/index.html
@@ -20,10 +20,7 @@
   </head>
 
   <body>
-    <!-- Scroll-Top -->
-    <div id="scroll-top" class="scroll-top">
-      <i class="fa-solid fa-angle-up"></i>
-    </div>
+g
 
     <!-- Header-Start -->
     <header id="header" class="header">
@@ -37,10 +34,10 @@
         <div class="navbar-components">
           <div class="navigation-buttons">
             <ul>
-              <li>HOME</li>
+              <li><a href="#home">HOME</a></li>
               <li>MENU</li>
-              <li>BLOG</li>
-              <li>RESERVATION</li>
+              <li><a href="./blog-page.html">BLOG</a></li>
+              <li><a href="#reservation">RESERVATION</a></li>
             </ul>
           </div>
 
@@ -161,7 +158,7 @@
     <!-- Header-End -->
 
     <!-- Main-Start -->
-    <main>
+    <main id="home">
       <div class="main-banner">
         <div class="main-first-part">
           <div class="first-part-text">
@@ -321,7 +318,7 @@
       </div>
 
       <div class="fifth-main">
-        <div class="fifth-main-top-img">
+        <div id="reservation" class="fifth-main-top-img">
           <img src="assets/img/FIFTH-PART-IMG/menu-bottom-bg.png" alt="" />
         </div>
 
@@ -374,7 +371,6 @@
           referrerpolicy="no-referrer-when-downgrade"
         ></iframe>
       </div>
-
     </main>
     <!-- Main-End -->
 
