--- a/blog-page.html
+++ b/blog-page.html
@@ -155,6 +155,7 @@
     <!-- Dropdown Close On Blur -->
     <div id="shop-bg-blur" class="shop-background-blur dn"></div>
 
+    <!-- Main-Start -->
     <section class="header-section">
       <div class="header-section-text">
         <h1>BLOG</h1>
@@ -162,18 +163,16 @@
     </section>
 
     <section class="main-section">
-        <div class="main-section-left-column">
-            <div class="left-column-input">
-                <input type="text" placeholder="Search">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
-            
+      <div class="main-section-left-column">
+        <div class="left-column-input">
+          <input type="text" placeholder="Search" />
+          <i class="fa-solid fa-magnifying-glass"></i>
         </div>
+      </div>
 
-        <div class="main-section-right-column">
-
-        </div>
+      <div class="main-section-right-column"></div>
     </section>
+    <!-- Main-End -->
 
     <!-- Footer-Start -->
     <footer>
@@ -228,6 +227,7 @@
       </div>
     </footer>
     <!-- Footer-End -->
+
     <script src="assets/js/main.js"></script>
     <script src="assets/js/header.js"></script>
   </body>
