--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
   </head>
 
   <body>
-g
-
+    <!-- Scroll-Top -->
+    <div id="scroll-top" class="scroll-top">
+      <i class="fa-solid fa-angle-up"></i>
+    </div>
+    
     <!-- Header-Start -->
     <header id="header" class="header">
       <div class="container">
