--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="scroll-top" class="scroll-top">
       <i class="fa-solid fa-angle-up"></i>
     </div>
-    
+
     <!-- Header-Start -->
     <header id="header" class="header">
       <div class="container">
@@ -38,7 +38,7 @@
           <div class="navigation-buttons">
             <ul>
               <li><a href="#home">HOME</a></li>
-              <li>MENU</li>
+              <li><a href="#menu">MENU</a></li>
               <li><a href="./blog-page.html">BLOG</a></li>
               <li><a href="#reservation">RESERVATION</a></li>
             </ul>
@@ -313,14 +313,71 @@
         </div>
       </div>
 
-      <div class="fourth-main">
-        <div class="fourth-main-header">
-          <p>Fresh From Pizzon</p>
-          <h1>OUR SPECIAL MENU</h1>
+      <div id="menu" class="fourth-main">
+        <div class="fourth-main-top-img">
+          <img src="assets/img/FOURTH-PART-IMG/menu-top-bg.png" alt="" />
+        </div>
+        <div class="fourth-main-content">
+          <div class="fourth-main-header">
+            <p>Fresh From Pizzon</p>
+            <h1>OUR SPECIAL MENU</h1>
+          </div>
+          <div class="fourth-main-menu-bar">
+            <ul class="menu-bar-ul">
+              <li class="active-li">ALL</li>
+              <li>DRINKS</li>
+              <li>SALADS</li>
+              <li>PASTA</li>
+              <li>BURGERS</li>
+              <li>DESERTS</li>
+              <li>PIZZAS</li>
+            </ul>
+          </div>
+
+          <div class="menu-box">
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <p>MARGHERITA PIZZA</p>
+              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
+              <span>$20.99</span>
+            </div>
+            
+          </div>
+
         </div>
       </div>
 
-      <div class="fifth-main">
+      <div  class="fifth-main">
         <div id="reservation" class="fifth-main-top-img">
           <img src="assets/img/FIFTH-PART-IMG/menu-bottom-bg.png" alt="" />
         </div>
@@ -433,5 +490,6 @@
 
     <script src="assets/js/main.js"></script>
     <script src="assets/js/header.js"></script>
+    <script src="assets/js/menu-bar.js"></script>
   </body>
 </html>
