added some details on burger

--- a/index.html
+++ b/index.html
@@ -148,10 +148,12 @@
 
       <div id="burger-content" class="burger-content dn">
         <ul>
-          <li>HOME</li>
-          <li>MENU</li>
-          <li>BLOG</li>
-          <li>RESERVATION</li>
+          <li><a href="./index.html">HOME</a></li>
+          <li id="burger-li-menu-close"><a href="#menu">MENU</a></li>
+          <li><a href="./blog-page.html">BLOG</a></li>
+          <li id="burger-li-menu-close2">
+            <a href="#reservation">RESERVATION</a>
+          </li>
         </ul>
       </div>
     </header>
@@ -336,48 +338,57 @@
 
           <div class="menu-box">
             <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
               <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
+              <span class="menu-box-element-span1"
+                >Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.</span
+              >
+              <span class="menu-box-element-span2">$20.99</span>
             </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
-              <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
-              <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
-              <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
-              <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="">
-              <p>MARGHERITA PIZZA</p>
-              <span>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</span>
-              <span>$20.99</span>
-            </div>
-            
-          </div>
 
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
+              <p>MARGHERITA PIZZA</p>
+              <span class="menu-box-element-span1"
+                >Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.</span
+              >
+              <span class="menu-box-element-span2">$20.99</span>
+            </div>
+
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
+              <p>MARGHERITA PIZZA</p>
+              <span class="menu-box-element-span1"
+                >Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.</span
+              >
+              <span class="menu-box-element-span2">$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
+              <p>MARGHERITA PIZZA</p>
+              <span class="menu-box-element-span1"
+                >Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.</span
+              >
+              <span class="menu-box-element-span2">$20.99</span>
+            </div>
+            <div class="menu-box-element">
+              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
+              <p>MARGHERITA PIZZA</p>
+              <span class="menu-box-element-span1"
+                >Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry.</span
+              >
+              <span class="menu-box-element-span2">$20.99</span>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div  class="fifth-main">
+      <div class="fifth-main">
         <div id="reservation" class="fifth-main-top-img">
           <img src="assets/img/FIFTH-PART-IMG/menu-bottom-bg.png" alt="" />
         </div>
