--- a/blog-page.html
+++ b/blog-page.html
@@ -139,10 +139,10 @@
 
       <div id="burger-content" class="burger-content dn">
         <ul>
-          <li>HOME</li>
-          <li>MENU</li>
-          <li>BLOG</li>
-          <li>RESERVATION</li>
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="./index.html">MENU</a></li>
+          <li><a href="/blog-page.html">BLOG</a></li>
+          <li><a href="./index.html">RESERVATION</a></li>
         </ul>
       </div>
     </header>
