--- a/blog-page.html
+++ b/blog-page.html
@@ -29,7 +29,7 @@
           <div class="navigation-buttons">
             <ul>
               <li><a href="./index.html">HOME</a></li>
-              <li>MENU</li>
+              <li><a href="./index.html">MENU</a></li>
               <li><a href="./blog-page.html">BLOG</a></li>
               <li><a href="./index.html">RESERVATION</a></li>
             </ul>
