--- a/index.html
+++ b/index.html
@@ -327,63 +327,15 @@
           <div class="fourth-main-menu-bar">
             <ul class="menu-bar-ul">
               <li class="active-li">ALL</li>
-              <li>DRINKS</li>
-              <li>SALADS</li>
-              <li>PASTA</li>
-              <li>BURGERS</li>
-              <li>DESERTS</li>
               <li>PIZZAS</li>
+              <li>SALADS</li>
+              <li>DESERTS</li>
+              <li>DRINKS</li>
             </ul>
           </div>
 
-          <div class="menu-box">
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
-              <p>MARGHERITA PIZZA</p>
-              <span class="menu-box-element-span1"
-                >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.</span
-              >
-              <span class="menu-box-element-span2">$20.99</span>
-            </div>
-
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
-              <p>MARGHERITA PIZZA</p>
-              <span class="menu-box-element-span1"
-                >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.</span
-              >
-              <span class="menu-box-element-span2">$20.99</span>
-            </div>
-
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
-              <p>MARGHERITA PIZZA</p>
-              <span class="menu-box-element-span1"
-                >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.</span
-              >
-              <span class="menu-box-element-span2">$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
-              <p>MARGHERITA PIZZA</p>
-              <span class="menu-box-element-span1"
-                >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.</span
-              >
-              <span class="menu-box-element-span2">$20.99</span>
-            </div>
-            <div class="menu-box-element">
-              <img src="assets/img/PIZZA-IMAGES-FOR-DROPDOWN/1.png" alt="" />
-              <p>MARGHERITA PIZZA</p>
-              <span class="menu-box-element-span1"
-                >Lorem Ipsum is simply dummy text of the printing and
-                typesetting industry.</span
-              >
-              <span class="menu-box-element-span2">$20.99</span>
-            </div>
+          <div id="menu-box" class="menu-box">
+       
           </div>
         </div>
       </div>
