--- a/blog-page.html
+++ b/blog-page.html
@@ -165,9 +165,43 @@
     <section class="main-section">
       <div class="main-section-left-column">
         <div class="left-column-input">
-          <input type="text" placeholder="Search" />
+          <input type="text" placeholder="Search..." />
           <i class="fa-solid fa-magnifying-glass"></i>
         </div>
+        <h2>CATEGORIES</h2>
+        <ul>
+          <li>Decorate</li>
+          <li>Even</li>
+          <li>Gallery</li>
+          <li>Recipe</li>
+          <li>Restaurant Food</li>
+        </ul>
+        <h2>RECENT POST</h2>
+        <div class="recent-tab">
+          <div class="recent-tab-content">
+            <img src="assets/img/Blog-page/recent-1.jpg" alt="" />
+            <div class="recent-tab-content-text">
+              <p>SEPTEMBER 1, 2020</p>
+              <span>POSSESSION SO COMPARISON INQUIETU</span>
+            </div>
+          </div>
+          <div class="recent-tab-content">
+            <img src="assets/img/Blog-page/recent-2.jpg" alt="" />
+            <div class="recent-tab-content-text">
+              <p>SEPTEMBER 1, 2020</p>
+              <span>POSSESSION SO COMPARISON INQUIETU</span>
+            </div>
+          </div>
+          <div class="recent-tab-content">
+            <img src="assets/img/Blog-page/recent-3.jpg" alt="" />
+            <div class="recent-tab-content-text">
+              <p>SEPTEMBER 1, 2020</p>
+              <span>POSSESSION SO COMPARISON INQUIETU</span>
+            </div>
+          </div>
+        </div>
+        <h2>TAGS</h2>
+        
       </div>
 
       <div class="main-section-right-column"></div>
