before blog responsive

--- a/blog-page.html
+++ b/blog-page.html
@@ -201,10 +201,130 @@
           </div>
         </div>
         <h2>TAGS</h2>
-        
+        <div class="tag-content">
+          <span>Cooking</span>
+          <span>Food</span>
+          <span>Drink</span>
+          <span>Pizza</span>
+          <span>Salads</span>
+          <span>Deserts</span>
+        </div>
       </div>
 
-      <div class="main-section-right-column"></div>
+      <div class="main-section-right-column">
+        <div class="right-column-blog-box">
+          <img src="assets/img/Blog-page/right-1.jpg" alt="" />
+          <div class="writer-text">
+            <span>By John Doe</span>
+            <span>23 Comments</span>
+          </div>
+          <div class="writer-comment">
+            <h1>POSSESSION SO COMPARISON INQUIETUDE HE CONVICTION</h1>
+            <div class="writer-comment-spans">
+              <span
+                >There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage of Lorem
+                Ipsum, you need to be sure there isn't anything embarrassing
+                hidden in the middle of text. All the Lorem Ipsum generators on
+                the Internet tend to repeat predefined chunks as necessary,
+                making this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a handfulThere
+                are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected
+                humour, or randomised words which don't look even slightly
+                believable. If you are going to use a passage of Lorem Ipsum,
+                you need to be sure there isn't anything embarrassing hidden in
+                the middle of text. All the Lorem Ipsum generators on the
+                Internet tend to repeat predefined chunks as necessary, making
+                this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a
+                handful</span
+              >
+              <span>READ MORE</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="right-column-blog-box">
+          <img src="assets/img/Blog-page/right-2.jpg" alt="" />
+          <div class="writer-text">
+            <span>By John Doe</span>
+            <span>23 Comments</span>
+          </div>
+          <div class="writer-comment">
+            <h1>NEW CHEESE CRUSTS ON PIZZAS</h1>
+            <div class="writer-comment-spans">
+              <span
+                >There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage of Lorem
+                Ipsum, you need to be sure there isn't anything embarrassing
+                hidden in the middle of text. All the Lorem Ipsum generators on
+                the Internet tend to repeat predefined chunks as necessary,
+                making this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a handfulThere
+                are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected
+                humour, or randomised words which don't look even slightly
+                believable. If you are going to use a passage of Lorem Ipsum,
+                you need to be sure there isn't anything embarrassing hidden in
+                the middle of text. All the Lorem Ipsum generators on the
+                Internet tend to repeat predefined chunks as necessary, making
+                this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a
+                handful</span
+              >
+              <span>READ MORE</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="right-column-blog-box">
+          <img src="assets/img/Blog-page/right-3.jpg" alt="" />
+          <div class="writer-text">
+            <span>By John Doe</span>
+            <span>23 Comments</span>
+          </div>
+          <div class="writer-comment">
+            <h1>PEPPE’S LAUNCHES HEALTHY PIZZA FOR KIDS</h1>
+            <div class="writer-comment-spans">
+              <span
+                >There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable. If you are going to use a passage of Lorem
+                Ipsum, you need to be sure there isn't anything embarrassing
+                hidden in the middle of text. All the Lorem Ipsum generators on
+                the Internet tend to repeat predefined chunks as necessary,
+                making this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a handfulThere
+                are many variations of passages of Lorem Ipsum available, but
+                the majority have suffered alteration in some form, by injected
+                humour, or randomised words which don't look even slightly
+                believable. If you are going to use a passage of Lorem Ipsum,
+                you need to be sure there isn't anything embarrassing hidden in
+                the middle of text. All the Lorem Ipsum generators on the
+                Internet tend to repeat predefined chunks as necessary, making
+                this the first true generator on the Internet. It uses a
+                dictionary of over 200 Latin words, combined with a
+                handful</span
+              >
+              <span>READ MORE</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="navigation-bottom-buttons">
+          <button>1</button>
+          <button class="bottom-btn">2</button>
+          <button class="bottom-btn">3</button>
+          <button class="bottom-btn"><i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+      </div>
+
     </section>
     <!-- Main-End -->
 
