blog-responsive 90% done

--- a/blog-page.html
+++ b/blog-page.html
@@ -175,7 +175,7 @@
             <li>Even</li>
             <li>Gallery</li>
             <li>Recipe</li>
-            <li>Restaurant Food</li>
+            <li>Restaurant</li>
           </ul>
           <h2>RECENT POST</h2>
           <div class="recent-tab">
