--- a/blog-page.html
+++ b/blog-page.html
@@ -16,6 +16,12 @@
     <title>Blog | Pizzon</title>
   </head>
   <body>
+
+    <!-- Loader -->
+    <div id="loader" class="loader-container">
+      <span class="loader"></span>
+    </div>
+
     <!-- Header-Start -->
     <header id="header" class="header">
       <div class="container">
