--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
   </head>
 
   <body>
+    <!-- Loader -->
+    <div id="loader" class="loader-container">
+      <span class="loader"></span>
+    </div>
+
     <!-- Scroll-Top -->
     <div id="scroll-top" class="scroll-top">
       <i class="fa-solid fa-angle-up"></i>
@@ -334,12 +339,10 @@
             </ul>
           </div>
 
-          <div id="menu-box" class="menu-box">
-       
-          </div>
+          <div id="menu-box" class="menu-box"></div>
         </div>
       </div>
-      
+
       <div class="fifth-main">
         <div id="reservation" class="fifth-main-top-img">
           <img src="assets/img/FIFTH-PART-IMG/menu-bottom-bg.png" alt="" />
