added functions on call button

--- a/blog-page.html
+++ b/blog-page.html
@@ -42,7 +42,7 @@
           </div>
 
           <div class="nav-contact">
-            <i class="fa-solid fa-phone"></i>
+            <a href="./index.html"><i class="fa-solid fa-phone"></i></a> 
             <span>+12 345 678</span>
           </div>
 
