--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           </div>
 
           <div class="nav-contact">
-            <i class="fa-solid fa-phone"></i>
+            <a href="#reservation"><i class="fa-solid fa-phone"></i></a>
             <span>+12 345 678</span>
           </div>
 
